@@ -13,6 +13,7 @@ dist_pkgdata_DATA = \
   ALICE_2011_S8945144.info \
   ALICE_2012_I1181770.info \
   ALICE_2015_I1357424.info \
+  ALICE_2014_I1300380.info \
   ARGUS_1993_S2653028.info \
   ARGUS_1993_S2669951.info \
   ARGUS_1993_S2789213.info \
