@@ -1,0 +1,36 @@
+ BEGIN PLOT /ALICE_2014_I1300380/d01-x01-y01
+Title=$\Sigma(1385)^{+}$  yield in INEL pp collisions at $\sqrt{s} = 7$~TeV in $|y| < 0.5$.
+XLabel=$p_{\rm T}$ (GeV/$c$)
+YLabel=$\frac{1}{N_{\rm inel}} \frac{{\rm d}^2N}{{\rm d}p_{\rm T}{\rm d}y}$ ($c$/GeV)
+ END PLOT
+
+
+ BEGIN PLOT /ALICE_2014_I1300380/d01-x01-y02
+Title=$\Sigma(1385)^{-}$  yield in INEL pp collisions at $\sqrt{s} = 7$~TeV in $|y| < 0.5$.
+XLabel=$p_{\rm T}$ (GeV/$c$)
+YLabel=$\frac{1}{N_{\rm inel}} \frac{{\rm d}^2N}{{\rm d}p_{\rm T}{\rm d}y}$ ($c$/GeV)
+ END PLOT
+
+ BEGIN PLOT /ALICE_2014_I1300380/d01-x01-y03
+Title=$\overline{\Sigma}(1385)^{-}$  yield in INEL pp collisions at $\sqrt{s} = 7$~TeV in $|y| < 0.5$.
+XLabel=$p_{\rm T}$ (GeV/$c$)
+YLabel=$\frac{1}{N_{\rm inel}} \frac{{\rm d}^2N}{{\rm d}p_{\rm T}{\rm d}y}$ ($c$/GeV)
+ END PLOT
+
+ BEGIN PLOT /ALICE_2014_I1300380/d01-x01-y04
+Title=$\overline{\Sigma}(1385)^{+}$  yield in INEL pp collisions at $\sqrt{s} =  7$~TeV in $|y| < 0.5$.
+XLabel=$p_{\rm T}$ (GeV/$c$)
+YLabel=$\frac{1}{N_{\rm inel}} \frac{{\rm d}^2N}{{\rm d}p_{\rm T}{\rm d}y}$ ($c$/GeV)
+ END PLOT
+
+ BEGIN PLOT /ALICE_2014_I1300380/d02-x01-y01
+Title=$(\Xi(1530)^{0}+\overline{\Xi}(1530)^{0})/2$ yield in INEL pp collisions at $\sqrt{s} = 7$~TeV in $|y| < 0.5$.
+XLabel=$p_{\rm T}$ (GeV/$c$)
+YLabel=$\frac{1}{N_{\rm inel}} \frac{{\rm d}^2N}{{\rm d}p_{\rm T}{\rm d}y}$ ($c$/GeV)
+ END PLOT
+
+ BEGIN PLOT /ALICE_2014_I1300380/d03-x01-y01
+Title=Mean $p_{\rm T}$ vs mass in INEL pp collisions at $\sqrt{s}=  7$~TeV in $|y| < 0.5$.
+XLabel=$m$ (GeV/$c^2$)
+YLabel=$\langle p_{\rm T} \rangle$ (GeV/$c$)
+ END PLOT
