@@ -12,6 +12,7 @@ dist_pkgdata_DATA = \
   ALICE_2011_S8909580.plot \
   ALICE_2011_S8945144.plot \
   ALICE_2012_I1181770.plot \
+  ALICE_2014_I1300380.plot \
   ALICE_2015_I1357424.plot \
   ARGUS_1993_S2653028.plot \
   ARGUS_1993_S2669951.plot \
