@@ -1,0 +1,97 @@
+# BEGIN YODA_SCATTER2D /REF/ALICE_2014_I1300380/d01-x01-y01
+Path=/REF/ALICE_2014_I1300380/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.85	0.15000000000000002	0.15000000000000002			0.0063	8.193900170248598E-4	8.193900170248598E-4
+1.1	0.10000000000000009	0.09999999999999987			0.0058	7.4E-4	7.4E-4
+1.2999999999999998	0.09999999999999987	0.10000000000000009			0.0047	5.536244214266563E-4	5.536244214266563E-4
+1.5	0.10000000000000009	0.10000000000000009			0.0035	3.7336309405188936E-4	3.7336309405188936E-4
+1.7000000000000002	0.10000000000000009	0.09999999999999987			0.0027	3.4481879299133334E-4	3.4481879299133334E-4
+1.9	0.09999999999999987	0.10000000000000009			0.002	2.5144581921360314E-4	2.5144581921360314E-4
+2.2	0.20000000000000018	0.19999999999999973			0.0013	1.4480676779764128E-4	1.4480676779764128E-4
+2.7	0.30000000000000027	0.2999999999999998			6.2E-4	7.009279563550022E-5	7.009279563550022E-5
+3.5	0.5	0.5			2.1E-4	2.580620080523284E-5	2.580620080523284E-5
+5.0	1.0	1.0			2.9E-5	3.7696153649941525E-6	3.7696153649941525E-6
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ALICE_2014_I1300380/d01-x01-y02
+Path=/REF/ALICE_2014_I1300380/d01-x01-y02
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.85	0.15000000000000002	0.15000000000000002			0.0071	9.868130522039118E-4	9.868130522039118E-4
+1.1	0.10000000000000009	0.09999999999999987			0.0056	7.653757247260981E-4	7.653757247260981E-4
+1.2999999999999998	0.09999999999999987	0.10000000000000009			0.0051	6.937578828380979E-4	6.937578828380979E-4
+1.5	0.10000000000000009	0.10000000000000009			0.0039	5.192301994298867E-4	5.192301994298867E-4
+1.7000000000000002	0.10000000000000009	0.09999999999999987			0.0031	4.123105625617661E-4	4.123105625617661E-4
+1.9	0.09999999999999987	0.10000000000000009			0.0023	3.0109965127844305E-4	3.0109965127844305E-4
+2.2	0.20000000000000018	0.19999999999999973			0.0013	1.7419529270333342E-4	1.7419529270333342E-4
+2.7	0.30000000000000027	0.2999999999999998			7.2E-4	9.570788891204319E-5	9.570788891204319E-5
+3.5	0.5	0.5			2.0E-4	2.675238307142001E-5	2.675238307142001E-5
+5.0	1.0	1.0			3.2E-5	4.743416490252569E-6	4.743416490252569E-6
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ALICE_2014_I1300380/d01-x01-y03
+Path=/REF/ALICE_2014_I1300380/d01-x01-y03
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.85	0.15000000000000002	0.15000000000000002			0.0058	7.392563831310489E-4	7.392563831310489E-4
+1.1	0.10000000000000009	0.09999999999999987			0.0055	7.209022125087424E-4	7.209022125087424E-4
+1.2999999999999998	0.09999999999999987	0.10000000000000009			0.004	4.4721359549995795E-4	4.4721359549995795E-4
+1.5	0.10000000000000009	0.10000000000000009			0.0031	3.443835071544513E-4	3.443835071544513E-4
+1.7000000000000002	0.10000000000000009	0.09999999999999987			0.0025	3.0083217912982643E-4	3.0083217912982643E-4
+1.9	0.09999999999999987	0.10000000000000009			0.0018	1.986353442869622E-4	1.986353442869622E-4
+2.2	0.20000000000000018	0.19999999999999973			0.0013	1.3631214179228495E-4	1.3631214179228495E-4
+2.7	0.30000000000000027	0.2999999999999998			5.9E-4	7.324616030891996E-5	7.324616030891996E-5
+3.5	0.5	0.5			1.9E-4	2.476307735318856E-5	2.476307735318856E-5
+5.0	1.0	1.0			3.2E-5	4.743416490252569E-6	4.743416490252569E-6
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ALICE_2014_I1300380/d01-x01-y04
+Path=/REF/ALICE_2014_I1300380/d01-x01-y04
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.85	0.15000000000000002	0.15000000000000002			0.0063	0.0012210241602851272	0.0012210241602851272
+1.1	0.10000000000000009	0.09999999999999987			0.0054	8.905054744357275E-4	8.905054744357275E-4
+1.2999999999999998	0.09999999999999987	0.10000000000000009			0.0051	8.570297544426331E-4	8.570297544426331E-4
+1.5	0.10000000000000009	0.10000000000000009			0.0038	6.040695324215582E-4	6.040695324215582E-4
+1.7000000000000002	0.10000000000000009	0.09999999999999987			0.003	5.412023651093922E-4	5.412023651093922E-4
+1.9	0.09999999999999987	0.10000000000000009			0.0024	3.9849717690342555E-4	3.9849717690342555E-4
+2.2	0.20000000000000018	0.19999999999999973			0.0013	1.9752468200202221E-4	1.9752468200202221E-4
+2.7	0.30000000000000027	0.2999999999999998			6.2E-4	1.1258774356030056E-4	1.1258774356030056E-4
+3.5	0.5	0.5			2.2E-4	3.6214499858482096E-5	3.6214499858482096E-5
+5.0	1.0	1.0			2.8E-5	4.701063709417264E-6	4.701063709417264E-6
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ALICE_2014_I1300380/d02-x01-y01
+Path=/REF/ALICE_2014_I1300380/d02-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.0	0.19999999999999996	0.19999999999999996			0.00138	1.7464249196572982E-4	1.7464249196572982E-4
+1.4	0.19999999999999996	0.20000000000000018			0.00109	6.708203932499369E-5	6.708203932499369E-5
+1.8	0.19999999999999996	0.19999999999999996			7.8E-4	5.3851648071345046E-5	5.3851648071345046E-5
+2.2	0.20000000000000018	0.19999999999999973			4.6E-4	2.6627053911388694E-5	2.6627053911388694E-5
+2.8	0.3999999999999999	0.40000000000000036			2.26E-4	1.1986425655715719E-5	1.1986425655715719E-5
+3.6	0.3999999999999999	0.3999999999999999			6.6E-5	4.2707493487677315E-6	4.2707493487677315E-6
+4.4	0.40000000000000036	0.39999999999999947			2.34E-5	2.1211602956872446E-6	2.1211602956872446E-6
+5.199999999999999	0.39999999999999947	0.40000000000000036			8.1E-6	1.0160693873943846E-6	1.0160693873943846E-6
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ALICE_2014_I1300380/d03-x01-y01
+Path=/REF/ALICE_2014_I1300380/d03-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.13957	        0.01	0.01			0.469	0.01	0.01
+0.493677	0.01	0.01			0.77	0.016031219541881397	0.016031219541881397
+0.89166	        0.01	0.01			1.01	0.020223748416156685	0.020223748416156685
+0.938272013	0.01	0.01			0.9	0.032015621187164243	0.032015621187164243
+1.019455	0.01	0.01			1.07	0.0304138126514911	0.0304138126514911
+1.32171	        0.01	0.01			1.21	0.0608276253029822	0.0608276253029822
+1.3828	        0.01	0.01			1.15	0.07280109889280519	0.07280109889280519
+1.5318	        0.01	0.01			1.31	0.09219544457292887	0.09219544457292887
+1.67245	        0.01	0.01			1.47	0.09486832980505137	0.09486832980505137
+# END YODA_SCATTER2D 
