@@ -12,6 +12,7 @@ dist_pkgdata_DATA = \
   ALICE_2011_S8909580.yoda \
   ALICE_2011_S8945144.yoda \
   ALICE_2012_I1181770.yoda \
+  ALICE_2014_I1300380.yoda \
   ALICE_2015_I1357424.yoda \
   ARGUS_1993_S2653028.yoda \
   ARGUS_1993_S2669951.yoda \
