@@ -45,6 +45,7 @@ RivetALICEAnalyses_la_SOURCES = \
     ALICE_2011_S8909580.cc \
     ALICE_2011_S8945144.cc \
     ALICE_2012_I1181770.cc \
+    ALICE_2014_I1300380.cc \
     ALICE_2015_I1357424.cc
 
 
