@@ -1,7 +1,8 @@
 2015-07-02  Holger Schulz  <holger.schulz@durham.ac.uk>
 
 	* Tidy up ATLAS higgs combination analysis.
-	* Add ALICE kaon, pion analysis (ALICE_2015_I1357424))
+	* Add ALICE kaon, pion analysis (ALICE_2015_I1357424)
+	* Add ALICE strange baryon analysis (ALICE_2014_I1300380)
 
 2015-07-01  Andy Buckley  <andy.buckley@cern.ch>
 
